Added esglimited.com craftcmd rebuild

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ JavaScript/ES6 and Svelte.</p><br>
           <ul class="technologies">
             <li>
               PHP
-              <span>7/8+, KirbyCMS, Wordpress</span>
+              <span>7/8+, Craft CMS, KirbyCMS</span>
             </li>
             <li>
               SQL
@@ -354,7 +354,7 @@ adminLTE), and DYMO Javascript SDK for label printing.
               </li>
 
               <li>
-                Developed full websites with and templates for various content management systems (Wordpress &amp; Kirby).
+                Rebuilt company website from a design mockup, creating re-usable components with Sass, implementing Craft CMS, and deploying on DigitalOcean.
               </li>
 
               <li>
